Modificando el logo del header

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class="orangeHeader">
-            <img src="/img/Logo.png" alt="Logo" class="logoHeader">
+            <img src="/img2/Logo.png" alt="Logo" class="logoHeader">
             <div class="menu">
                 <span><img src="img2/pawprintMenu.png" alt="pawprint">Categorías</span>
                 <span><img src="img2/pawprintMenu.png" alt="pawprint">Pets</span>
